--- a/tsetmc.ir/tsetmc.ir.csproj
+++ b/tsetmc.ir/tsetmc.ir.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
-    <RootNamespace>Tsetmc.IR</RootNamespace>
+    <RootNamespace>IranTsetmc</RootNamespace>
   </PropertyGroup>
 
 </Project>
