--- a/tsetmc.ir/tsetmc.ir.csproj
+++ b/tsetmc.ir/tsetmc.ir.csproj
@@ -5,4 +5,8 @@
     <RootNamespace>IranTsetmc</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="HtmlAgilityPack" Version="1.11.37" />
+  </ItemGroup>
+
 </Project>
